2013-10-08 event bug on safari in Video addon fixed
2013-10-07 Fixed problem with next page in book mode while presentation contains 2 pages only
2013-10-07 event bug in addons Graph and Single State Button fixed
2013-10-07 Added getView function for modules
2013-10-06 Changed navigation arrows default styling.
2013-10-04 Fixed bug in event propagation in Double State Button
2013-10-04 Removed user-select property from Drawing module styles, which was causing inability to select property value in Editor
2013-10-03 Added stop propagation to addons: Crossword, Graph, Line Number, Plot, Audio, Drawing, IMageViewer Button Controller, Multi audio, DOuble State Button, Single State Button, Slider, Event Sender
2013-10-03 Navigation arrows restored
2013-10-03 Added stop propagation to addons: Connection, Hangman, Image Identification, Magic boxes, Gamememo, Multiplegap, Puzzle, Text selection, True False, Writing Calculations, Navigation Bar, Slide show, Image viewer, Animation
2013-10-03 MP4 sources are now prefered in video addon
2013-10-02 Fixed problem with Navigation Bar with page indexes.
2013-10-02 Fixed problem with blocking Line Number addon and added new class 'disable' to '.outer' div when property 'Disable' is on true
2013-10-01 Added page name to page loaded event
2013-10-01 Fixed problem with definition of disable and not activity properties
2013-10-01 Fixed problem with scoring in graph
2013-09-30 Fixed problem with points in Image Indentification addon
2013-09-30 Fixed problem with mouseleave.
2013-09-30 Fixed problem with Drawing addon. Loading state and eraser.
2013-09-27 Fixed problem with displaying Glossary on book view
2013-09-26 Fixed displaying Glossary and other addons (Video, Image etc) on the following addons: Feedback, True/False, Table
2013-09-23 Fixed TextParserProxy issue
2013-09-23 Added simulate Tap event listeners to 4 addons (True/False, Connection, Image Identification, Text Identification)
2013-09-20 Fixed addon on Feedback issue