@@ -8,6 +8,7 @@
 	<addon-descriptor addonId="Connection"/>
 	<addon-descriptor addonId="Single_State_Button"/>
 	<addon-descriptor addonId="Double_State_Button"/>
+	<addon-descriptor addonId="Event_Listener"/>
 	<addon-descriptor addonId="DebugAddon" href="addons/debug.addon.xml"/>
 	<addon-descriptor addonId="EventMonitor" href="addons/eventmonitor.addon.xml"/>
 	<addon-descriptor addonId="EventSource" href="addons/eventsource.addon.xml"/>
@@ -41,12 +42,14 @@
 
 <pages>
 	<page name="image source" href="pages/image-source.xml"/>
+	<page name="links" href="pages/links.page.xml" reportable="false"/>
+	<page name="links" href="pages/links.page.xml" reportable="false"/>
+	<page name="eventbus" href="pages/eventbus.page.xml"/>
 	<page name="draggable" href="pages/draggable-gaps.page.xml"/>
 	<!-- 
 	<page name="inline choice" href="pages/inline-choice.page.xml"/>
 	<page name="cloze" href="pages/cloze.page.xml"/>
 	<page name="schoice" href="pages/schoice.page.xml"/>
-	<page name="eventbus" href="pages/eventbus.page.xml"/>
 	<page name="ordering" href="pages/ordering.page.xml" reportable="true"/>
 	<page name="Math page, $$ f = \frac{x}{2}$$" href="pages/math.page.xml"/>
 	<page name="report" href="pages/report.page.xml" reportable="false"/>
@@ -65,7 +68,6 @@
 	<page name="problem" href="pages/problem.page.xml"/>
 	<page name="problem" href="pages/problem.page.xml"/>
 	<page name="addon" href="pages/addon.page.xml"/>
-	<page name="links" href="pages/links.page.xml" reportable="false"/>
 	<page name="test" href="pages/connection.page.xml"/>
 	<page name="no addon" href="pages/no-addon.page.xml"/>
 	<page name="vimeo" href="pages/vimeo.page.xml"/>
