@@ -21,12 +21,12 @@
 		var player;
       	function icOnAppLoaded(){
     	    //player = icCreatePlayer('_icplayer');
-    	    player = icCreateBook('_icplayer', true);
+    	    player = icCreateBook('_icplayer', false);
 	       	//player.load('content/book.ic.xml');
     	    //setPlayerState();
 	        //player.setAnalytics('5n2WsdElQZqnDqT3-amHrw');
-	        //player.load('test/pages/main.xml', 4);
-	       	player.load('content/default.ic.xml');
+	        player.load('test/pages/main.xml');
+	       	//player.load('content/default.ic.xml');
 	       	//player.load('content/responsive.ic.xml');
         	//player.onStatusChanged(function(type, source, value){
         		//console.log("type:" + type + ", source: " + source, ", value:" + value);
